--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>store_app3.0</title>
     <meta name="viewport" content="width=device-width">
     <meta name="format-detection" content="telephone=no" />
-    <link rel="stylesheet" href="dist/style.css">
+    <!-- <link rel="stylesheet" href="dist/style.css"> -->
   </head>
   <body>
     <div id="app"></div>
