--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>store_app3.0</title>
+    <title>商铺平台</title>
     <meta name="viewport" content="width=device-width">
     <meta name="format-detection" content="telephone=no" />
     <!-- <link rel="stylesheet" href="dist/style.css"> -->
   </head>
   <body>
     <div id="app"></div>
-    <!-- <script src="config.js"></script> -->
+    <script src="config.js"></script>
     <script src="dist/build.js"></script>
   </body>
 </html>
